@@ -16,6 +16,14 @@ Changelog
 
  * BREAKING CHANGES
     - variable $input-border-focus has been replaced with $input-border-color-focus
+    - Renaming of helper classes
+        - .hidden > .d-hidden
+        - .inline > .d-inline
+        - .inline-block > .d-inline-block
+        - .block > .d-block
+        - .flex > .d-flex
+        - .display-table > .d-table
+        - .display-table-cell > .d-table-cell
 
 1.3.6 - 08-Sep-2017
 ~~~~~~~~~~~~~~~~~~~
